--- a/view/components/card/search/search-result.dust
+++ b/view/components/card/search/search-result.dust
@@ -3,7 +3,7 @@
 <div class="card">
   <div class="card__details">
     <h2>
-      <a href={data.url}>{data.heading-text}</a>
+      <a href={data.url}>{data.heading-text|s}</a>
     </h2>
       <ul class="list--inline">
 
@@ -15,9 +15,9 @@
           {/data.hints}
         {/data.hints}
         <li>
-          <span class="url">{data.short-url}</span>
+          <span class="url">{data.short-url|s}</span>
         </li>
       </ul>
-    <p>{data.paragraph-content}</p>
+    <p>{data.paragraph-content|s}</p>
   </div>
 </div>
